--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.xiaoshaobinoutlook.oneweather" >
+    package="com.oneweather.app"
+    android:versionCode="1"
+    android:versionName="1.0" >
+
+    <uses-sdk
+        android:minSdkVersion="14"
+        android:targetSdkVersion="18" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/logo"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme" ></application>
+        android:theme="@style/AppTheme" >
+        <activity
+            android:name="com.oneweather.app.activity.ChooseAreaActivity"
+            android:label="@string/app_name" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity android:name="com.oneweather.app.activity.WeatherActivity" >
+        </activity>
+
+        <service android:name="com.oneweather.app.service.AutoUpdateService" >
+        </service>
+
+        <receiver android:name="com.oneweather.app.receiver.AutoUpdateReceiver" >
+        </receiver>
+    </application>
 
 </manifest>
