--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,10 @@
     package="com.oneweather.app"
     android:versionCode="1"
     android:versionName="1.0" >
-
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
@@ -27,6 +30,8 @@
         <activity android:name="com.oneweather.app.activity.WeatherActivity" >
         </activity>
         <activity android:name="com.oneweather.app.activity.UpdateSetActivity" >
+        </activity>
+        <activity android:name="com.oneweather.app.activity.CamOpenActivity" >
         </activity>
         <service android:name="com.oneweather.app.service.AutoUpdateService" >
         </service>
